[GTK] Fix build errors with OpenGL ES https://bugs.webkit.org/show_bug.cgi?id=146626

Reviewed by Carlos Garcia Campos.

* platform/graphics/ANGLEWebKitBridge.h: Include <GLES2/gl2.h>
when building with OpenGL ES 2 support enabled.
(WebCore::ANGLEShaderSymbol::isSampler): Don't test for
OpenGL-specific GL_SAMPLER_2D_RECT_ARB value when OpenGL ES 2
support is enabled.


Canonical link: https://commits.webkit.org/164720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186330 268f45cc-cd09-0410-ab3c-d52691b4dbfc